--- a/locales/en.json
+++ b/locales/en.json
@@ -1,10 +1,15 @@
 {
 	"welcome_back": "Welcome back, %{username}",
-	"how_are_you_feeling": "How are you feeling today?",
+	"how_are_you_feeling_today": "How are you feeling today?",
 	"welcome_to_soulwander": "Welcome to SoulWander",
 	"find_yourself": "Find yourself. Find peace.",
 	"start_new_entry": "Start New Entry",
 	"feeling_message": "You are feeling %{mood}. Would you like to share more of your feelings in your journal?",
-	"welcome_guest_message": "welcome_guest_message",
-	"welcome_message": "welcome_message"
+	"welcome_guest_message": "Welcome, Guest",
+	"welcome_message": "Welcome",
+	"category": "category",
+	"Physical Health": "Physical Health",
+	"days_to_accomplish": "days_to_accomplish",
+	"update_progress": "update_progress",
+	"add_new_goal": "add_new_goal"
 }
