--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,10 +1,15 @@
 {
-	"welcome_back": "Добро пожаловать обратно, <%= username %>",
-	"how_are_you_feeling": "Как ты себя чувствуешь сегодня?",
+	"welcome_back": "Добро пожаловать обратно, %{username}",
+	"how_are_you_feeling_today": "Как ты себя чувствуешь сегодня?",
 	"welcome_to_soulwander": "Добро пожаловать в SoulWander",
 	"find_yourself": "Найди себя. Найди спокойствие.",
 	"start_new_entry": "Начать новую запись",
-	"feeling_message": "Вы чувствуете <%= mood %>. Хотели бы вы поделиться своими чувствами в своем дневнике?",
-	"welcome_guest_message": "welcome_guest_message",
-	"welcome_message": "welcome_message"
+	"feeling_message": "Вы чувствуете %{mood}. Хотели бы вы поделиться своими чувствами в своем дневнике?",
+	"welcome_guest_message": "Добро пожаловать, гость",
+	"welcome_message": "Добро пожаловать",
+	"category": "category",
+	"Physical Health": "Physical Health",
+	"days_to_accomplish": "days_to_accomplish",
+	"update_progress": "update_progress",
+	"add_new_goal": "add_new_goal"
 }
